fixed dockerfile bind

--- a/freelancer-dapp/Dockerfile
+++ b/freelancer-dapp/Dockerfile
@@ -15,4 +15,5 @@ RUN npm install -g serve
 
 EXPOSE 3000
 
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["serve", "-s", "build", "-l", "3000", "--listen", "0.0.0.0"]
+
